common-statefulsets/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
spec:
  ingressClassName: nginx-internal
  rules:
  - host:
    http:
      paths:
        - path: /      
          pathType: Prefix
          backend:
            service:
              name: $(APP_SERVICE)
              port:
                number: $(APP_PORT)
